# ddls

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh
application/minst/data/: download_data.sh  gen_dist_sample.py  gen_sample.py  pull.sh
application/minst/model/: main.py  models.py
application/recommendation/: README.md
application/recommendation/data/: gen_dist_sample.py  preprocess.sh  run.sh
application/urban_computing/: README.md
benchmark/: CMakeLists.txt  README.md  bench_feeder.cc  bench_zoo.cc
binding/java/: README.md
binding/python/: README.md  install.sh  setup.py
binding/python/ddls/: base.py
binding/python/hpps/: array_table.py  base.py  context.py  data_type.py  libinfo.py  zoo.py
binding/python/tracker/: mpi.py  opts.py  submit.py
binding/yarn/: build.sh
cmake/: Utils.cmake
example/: README.md
hinfer/: README.md
hpps/: CMakeLists.txt
hpps/api/: c_api_array_table.cc  c_api_array_table.h  c_api_error.cc  c_api_error.h  c_api_feeder.cc  c_api_feeder.h  c_api_kv_table.cc  c_api_kv_table.h  c_api_table.cc  c_api_table.h  c_api_tensor.cc  c_api_tensor.h  c_api_zoo.cc  c_api_zoo.h
hpps/common/: allocator.cc  allocator.h  blob.cc  blob.h  configure.cc  configure.h  dashboard.cc  dashboard.h  hash.h  log.cc  log.h  message.h  queue.h  random.cc  random.h  string_util.h  tensor.h  thread_local.h  thread_pool.h  timer.cc  timer.h  types.h  version.h  waiter.h
hpps/common/io/: hdfs_stream.cc  hdfs_stream.h  io.cc  io.h  local_stream.cc  local_stream.h
hpps/feeder/: batch.cc  batch.h  batch_iterator.cc  batch_iterator.h  blocking_queue.h  common.h  feeder.cc  feeder.h  plan.cc  plan.h  record_io.cc  record_io.h  runner.cc  runner.h  sample_db.cc  sample_db.h  tensor.h  thread_pool.h  types.h  utils.h
hpps/frame/: actor.cc  actor.h  communicator.cc  communicator.h  controller.cc  controller.h  node.cc  node.h  server.cc  server.h  table_factory.cc  table_factory.h  table_interface.cc  table_interface.h  worker.cc  worker.h  zoo.cc  zoo.h
hpps/frame/scheduler/: scheduler.cc  scheduler.h  sync_scheduler.cc  sync_scheduler.h
hpps/kvstore/: .kvstore.h.swp  kvstore.cc  kvstore.h
hpps/net/: allreduce_engine.cc  allreduce_engine.h  allreduce_topo.cc  mpi_net.cc  mpi_net.h  net.cc  net.h  net_util.cc  net_util.h  zmq_net.h
hpps/table/: array_table.cc  array_table.h  kv_table.cc  kv_table.h
hpps/updater/: adagrad_updater.h  adam_updater.h  avg_updater.h  momentum_updater.h  sgd_updater.h  updater.cc  updater.h
hpps/updater/dcasgd/: dcasgd_updater.h  dcasgda_updater.h
python/: README.md
python/hpps/: libinfo.py  random_option.py  tensor.py  zoo.py
test/: CMakeLists.txt
test/hpps/: CMakeLists.txt
test/hpps/common/: allocator_test.cc  blob_test.cc  hash_test.cc  message_test.cc  queue_test.cc  random_test.cc  tensor_test.cc  waiter_test.cc
test/python/: test_embedding.py  test_feeder.py  test_recomm_feeder.py  test_record_io.py  test_topi.py  test_zoo.py
tests/: CMakeLists.txt
thirdparty2/: CMakeLists.txt
thirdparty2/zeromq/: CMakeLists.txt
topi/: README.md
(+46 files in other folders)
